src/pages/ru/v1.17.0/using-or/next.mdx
---
title: "Использование OpenReplay с Next.js"
metaTitle: "Добавление трекера OpenReplay в ваше приложение Next.js"
metaDescription: "Узнайте, как запустить трекер в вашем приложении Next.js"
---
import GoDeeperFooter from '~/components/go-deeper-footer.astro'

Заставить трекер работать в приложении Next.js довольно просто. Поскольку Next.js работает поверх React, процесс очень похож; основная сложность связана с возможностями серверного рендеринга (Server Side Rendering) в Next.js.

Но как только вы поймёте, как они работают и как структурировать код, выполняемый только на стороне клиента, вы в мгновение ока начнёте отслеживать своих пользователей.

## Добавление кода отслеживания

Хотя вы можете получить версию кода для копирования и вставки прямо с платформы при создании нового проекта, этот код слишком упрощённый и может не соответствовать лучшим практикам, которых ожидает ваша команда или компания.

### Компонент Tracker

Этот метод предлагает минималистичный подход, при котором мы внедряем трекер в приложение как компонент, который будет динамически загружать библиотеку.
 
#### App Router (v14+) - use client

```jsx
'use client'
import {useEffect} from "react"
import Tracker from '@openreplay/tracker'

const tracker = new Tracker({
  projectKey: "",
  ingestPoint: "",
})

const Openreplay = () => {
  useEffect(() => {
    if (typeof window !== 'undefined') {
      tracker.start()
    }
  }, [])

  return null
}

export default Openreplay 
```

#### Обычный компонент (Next до v13)

```jsx
[...]

function TrackerComponent() {
const [tracker, setTracker] = React.useState(null);

  React.useEffect(() => {
    (async function () {
      const Tracker = await import("@openreplay/tracker");
      const openRelayTracker = new Tracker.default({
        projectKey: PROJECT_KEY,
        __DISABLE_SECURE_MODE: true,
      });

      setTracker(openRelayTracker);
    })();
  }, []);
[...]
```

### Контекст Tracker

этот метод позволяет вам создать контекст, что, в свою очередь, упрощает управление состоянием трекера и вызов его различных API.

```jsx
import { createContext } from "react"
import {v4 as uuidV4} from 'uuid'
import { useReducer } from "react"

export const TrackerContext = createContext()

function defaultGetUserId() {
   return uuidV4() 
}

async function newTracker(config) {
    // we use dynamic import to make sure that tracker is started inside browser env
    const Tracker = await import("@openreplay/tracker");
    const getUserId = (config?.userIdEnabled && config?.getUserId) ? config.getUserId : defaultGetUserId
    let userId = null;

    const trackerConfig = {
        projectKey: config?.projectKey || process.env.NEXT_PUBLIC_OPENREPLAY_PROJECT_KEY
    }

    const tracker = new Tracker(trackerConfig);
    
    if(config?.userIdEnabled) {
        userId = getUserId()
        tracker.setUserID(userId)
    }
    return tracker

}

function reducer(state, action) {
        switch(action.type) {
            case 'init': {
                if(!state.tracker) {
                    console.log("Instantiaing the tracker for the first time...")
                    return {...state, tracker: newTracker(state.config)}
                }
                return state
            }
            case 'start': {
                console.log("Starting tracker...")
                state.tracker.start()
                return state
            }
        }
    }

export default function TrackerProvider({children, config = {}}) {
    let [state, dispatch] = useReducer(reducer, {tracker: null, config})
    let value = {
        startTracking: () => dispatch({type: 'start'}),
        initTracker: () => dispatch({type: 'init'})
    }

    return <TrackerContext.Provider value={value}>{children}</TrackerContext.Provider>
}
```

Этот провайдер предоставляет пользователю 2 метода:

- `initTracker`: который создаёт экземпляр трекера с предоставленной конфигурацией.
- `startTracking`: который запускает начало процесса отслеживания.

Этот провайдер также принимает объект «конфигурации», который вы можете расширять для будущих функций. В этом примере показано, как при желании включить возможность уникальной идентификации пользователей. Вы можете использовать UUID по умолчанию, который будет уникальным для каждого пользователя при каждом посещении страницы. В качестве альтернативы вы можете предоставить пользовательскую функцию `getUserId` в составе конфигурации. 

С помощью вашей пользовательской функции вы можете передавать идентификатор клиента вашего магазина, адрес электронной почты пользователя или что-либо ещё, что однозначно идентифицирует пользователя в вашем приложении. Таким образом, вы можете отслеживать их повторы сессий с течением времени на случай, если у них возникнет какая-то конкретная проблема, о которой не сообщают другие.

💡**Примечание для пользователей self-hosted**: если вы используете self-hosted версию OpenReplay, вам также потребуется указать свойство конфигурации `ingestPoint`. Это свойство задаёт конечную точку приёма данных трекера. Пользователям Cloud это не нужно, потому что по умолчанию трекер уже знает, где находится SaaS-версия этой конечной точки, но если вы размещаете его самостоятельно, вам нужно будет её указать (это должно выглядеть примерно так: `https://openreplay.mydomain.com/ingest`) 

### Работа с "projectKey" в вашем коде

Обратите внимание, что `projectKey`, который вы настраиваете, — это тот, что предоставляется платформой OpenReplay. Из соображений безопасности это значение не следует жёстко прописывать в коде, а лучше хранить в каком-либо файле/системе конфигурации.

В этом примере я использую файлы `.env` от Next. Нужно понимать, что если вы не добавите к переменной окружения префикс `NEXT_PUBLIC`, ваш клиентский код (трекер) не получит к ней доступа. 

Если это неприемлемо, вы можете использовать `getStaticProps` на первой странице, которую посещают ваши пользователи, чтобы получить это значение до создания экземпляра трекера. Оба примера приведены ниже.

## Использование контекста трекера

Импортируйте и оберните ваше приложение в `TrackerProvider`, который мы создали ранее, вот так:

```jsx
import '../styles/globals.css'
import TrackerProvider from '../context/trackerContext'

function MyApp({ Component, pageProps }) {

  return <TrackerProvider>
        <Component {...pageProps} />
    </TrackerProvider>
}

export default MyApp
```

Это файл `_app.js`, который служит точкой входа для всего приложения.  

А затем вы можете запускать отслеживание из любого компонента по вашему желанию, вот так:

```jsx
import { useContext, useEffect } from 'react'
import { TrackerContext } from '../context/trackerContext'
import styles from '../styles/Home.module.css'

export default function YourComponent({projectKey}) {
    
    const {initTracker, startTracking} = useContext(TrackerContext)
    
    useEffect( () => {
       initTracker()
       startTracking()
    }, [])
//.... rest of your code
}
```

Если вам не нужен такой контроль, вы можете объединить оба — «сообщение init» и «сообщение start tracking», — чтобы для запуска отслеживания вам нужно было вызвать всего одну функцию.

## Есть вопросы?

Чтобы увидеть **полный код** работающего приложения на основе Next, вы можете ознакомиться с [этим репозиторием](https://github.com/deleteman/openreplay-next-example).

Если у вас возникнут какие-либо проблемы с настройкой трекера в вашем проекте на основе Next, свяжитесь с нами в нашем [сообществе Slack](https://slack.openreplay.com/) и задайте вопрос напрямую нашим разработчикам!

<GoDeeperFooter />
